add logout func and redis blacklist
